# First-Project-With-FastAPI

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/versions/: 59f1b4b04607_create_user_table.py  fc30b71b7597_create_polls_table.py
db/: db.py
db/models/: models.py
