[tool.poetry]
name = "grad-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
SQLAlchemy = "^1.4.31"
databases = "^0.5.5"
alembic = "^1.7.6"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
